--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "City Scrapers Events",
-  "name": "City Bureau | City Scrapers Events",
+  "short_name": "St. Louis Public Meetings",
+  "name": "City Scrapers | St. Louis Public Meetings",
   "icons": [
     {
       "src": "favicon.ico",
