--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "city-scrapers-events",
   "version": "0.1.0",
   "license": "MIT",
-  "homepage": "https://city-bureau.github.io/city-scrapers-events",
+  "homepage": "https://stl-public-meetings.github.io/events-stl/",
   "dependencies": {
     "moment": "^2.22.1",
     "moment-timezone": "^0.5.16",
